--- a/.github/workflows/docusaurus-deploy.yml
+++ b/.github/workflows/docusaurus-deploy.yml
@@ -30,8 +30,8 @@ jobs:
           cd readme
           node process-readme-files.js || echo "Warning: Some readme files may not have been processed correctly"
 
-          # Fix markdown links
-          node scripts/fix-markdown-links.js || echo "Warning: Some markdown links could not be fixed"
+          # Remove broken links
+          node scripts/remove-broken-links.js || echo "Warning: Some markdown links could not be fixed"
 
       - name: Install Docusaurus dependencies
         run: |
