--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -38,6 +38,7 @@
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
+    "jwks-rsa": "^3.1.0",
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
@@ -68,6 +69,7 @@
     "@types/supertest": "^2.0.12",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
+    "@types/jwks-rsa": "^3.0.0",
     "@types/ws": "^8.5.10",
     "eslint": "^8.44.0",
     "jest": "^29.6.1",
