updates on deployments

--- a/packages/server/.env
+++ b/packages/server/.env
@@ -65,6 +65,23 @@ HF_API_KEY=
 HF_ORGANIZATION_ID=
 # Default dataset provider
 DEFAULT_DATASET_PROVIDER=
+# HuggingFace Model Configuration
+# Default text model for natural language processing and material descriptions
+HF_DEFAULT_TEXT_MODEL=microsoft/DialoGPT-medium
+# Default embedding model for vector similarity search and semantic matching
+HF_DEFAULT_EMBEDDING_MODEL=sentence-transformers/all-MiniLM-L6-v2
+# Default image model for material recognition and visual analysis
+HF_DEFAULT_IMAGE_MODEL=google/vit-base-patch16-224
+# Model request timeout in milliseconds (30 seconds)
+HF_MODEL_TIMEOUT=30000
+# Use faster, optimized models when available
+HF_USE_FAST_MODELS=true
+# OCR model path for document processing
+OCR_MODEL_PATH=./models/ocr/easyocr
+# Maximum ML processing time in milliseconds (5 minutes)
+ML_MAX_PROCESSING_TIME=300000
+# Model cache directory path
+MODEL_CACHE_PATH=./cache/models
 
 # ============================================================
 # Logging Configuration
